aptosid-manual-reader (0.2.4) ORPHANED; urgency=low

  * temporarily ORPHAN PACKAGE, it's currently not compatible to parse the
    structure of sidux-manual.
  * wrap debian/control in a syntax compliant way.
  * bump standards version to 3.9.1, no changes necessary.
  * switch to compact dh7 rules.
  * Build-Conflicts: libqt3-dev.
  * switch to compat level 8.
  * rename to aptosid-manual-reader

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 03:18:34 +0200

sidux-manual-reader (0.2.3) unstable; urgency=low

  * switch to dpkg-source 3.0 (native) format.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 03:16:30 +0200

sidux-manual-reader (0.2.2) unstable; urgency=low

  * switch to compact dh7 rules.
  * Build-Conflicts: libqt3-dev
  * bump standards version to 3.8.4, no changes necessary.
  * add missing compat level, use compat level 7.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 03:07:43 +0200

sidux-manual-reader (0.2.1) unstable; urgency=low

  * rebuild with gcc-4.4.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Dec 2009 19:12:29 +0100

sidux-manual-reader (0.2.0) unstable; urgency=low

  * German translation added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 Oct 2009 00:02:25 +0100

sidux-manual-reader (0.1.3) unstable; urgency=low

  * Show last page problem solved

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 25 Oct 2009 17:46:31 +0100

sidux-manual-reader (0.1.2) unstable; urgency=low

  * QSettings added 

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 25 Aug 2009 11:03:04 +0200

sidux-manual-reader (0.1.1) unstable; urgency=low

  * Start value for the search line
  * </h3> problem solved

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Aug 2009 10:55:15 +0200

sidux-manual-reader (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Language change problem solved
  * Search mode to quickSearch
  * copyright informations updated
  * sidux-manual-common as dependency