@@ -6,8 +6,8 @@ It was downloaded from http://www.wuertz.org/downloads
 Upstream Author: Fabian Wuertz <xadras@sidux.com>
 
 Copyright:
-	© 2007-2008 Fabian Wuertz <xadras@sidux.com>
-
+	© 2007-2009 Fabian Wuertz <xadras@sidux.com>
+	© 2010 Nikolas Poniros <edhunter@aptosid.com
 
 The following icons are from gnome-icon-theme
 Copyright © 2005 Gnome Artwork Team
